# csc475_project

./: .gitignore  Cargo.toml  README.md  go.mod
assets/: Sound_of_Silence.song  twinkle.song.txt
assets/songs/: sound-of-silence.song  test.song  twinkle-twinkle.song
examples/: cpal_record.rs  debug_song.rs  temp.rs  test.rs
src/: game.rs  lib.rs  main.rs  mic.rs  settings.rs  songs.rs
