[package]
name = "mir_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# [features]
# default = ["debug"]
# debug = ["bevy/dynamic_linking"]

[dependencies]
anyhow = "1.0.80"
bevy = "0.13.0"
bevy_egui = "0.26.0"
cpal = "0.15.2"
crossbeam-channel = "0.5.12"
egui_plot = "0.26.0"
ringbuffer = "0.15.0"
ron = "0.8.1"
rustfft = "6.2.0"
serde = "1.0.197"
thiserror = "1.0.57"

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
hound = "3.5.1"
